# loconet-esp32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_component.yml  sdkconfig.defaults
.github/workflows/: build.yaml  upload_component.yaml
components/libm18/: CMakeLists.txt  libm18.c  libm18.h
examples/: CMakeLists.txt
examples/gateway/: CMakeLists.txt  README.md  sdkconfig
examples/gateway/docs/BOM/: Bill of Materials - BOM.xlsx
examples/gateway/docs/PickAndPlace File/: PickAndPlace File - Top Layer.csv
examples/gateway/main/: CMakeLists.txt  gateway.h  gateway_led.c  hardware.h  idf_component.yml  main.c
examples/loconet-monitor/: CMakeLists.txt
examples/loconet-monitor/main/: CMakeLists.txt  idf_component.yml  main.c
include/: loconet_esp32.h
main/: CMakeLists.txt  m18_bms_esp32.c
src/: CMakeLists.txt  loconet_esp32.c  loconet_esp32.h
src/loconet/: CMakeLists.txt
src/loconet/include/: loconet.h  loconet_message.h
src/loconet/src/: CMakeLists.txt  loconet.c  loconet.h  loconet_message.c  loconet_message.h
